# crt

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: release.yml  test.yml
.metis/: code-index-hashes.json  code-index-symbols.json  code-index.md  config.toml  metis.db  vision.md
.metis/adrs/: CRT-A-0001.md
.metis/archived/backlog/bugs/: CRT-T-0154.md  CRT-T-0155.md  CRT-T-0160.md
.metis/archived/backlog/tech-debt/: CRT-T-0153.md
.metis/backlog/bugs/: CRT-T-0154.md  CRT-T-0155.md  CRT-T-0160.md  CRT-T-0177.md
.metis/backlog/tech-debt/: CRT-T-0153.md
.metis/initiatives/CRT-I-0026/: initiative.md
.metis/initiatives/CRT-I-0026/tasks/: CRT-T-0194.md  CRT-T-0195.md  CRT-T-0196.md  CRT-T-0197.md  CRT-T-0198.md  CRT-T-0199.md  CRT-T-0200.md  CRT-T-0201.md
.metis/initiatives/CRT-I-0028/: initiative.md
.metis/initiatives/CRT-I-0028/tasks/: CRT-T-0161.md  CRT-T-0162.md  CRT-T-0163.md  CRT-T-0164.md  CRT-T-0165.md  CRT-T-0166.md  CRT-T-0167.md  CRT-T-0168.md  CRT-T-0169.md
.metis/initiatives/CRT-I-0029/: initiative.md
.metis/initiatives/CRT-I-0029/tasks/: CRT-T-0170.md  CRT-T-0171.md  CRT-T-0172.md  CRT-T-0173.md  CRT-T-0174.md  CRT-T-0175.md  CRT-T-0176.md
.metis/initiatives/CRT-I-0030/: initiative.md
.metis/initiatives/CRT-I-0030/tasks/: CRT-T-0178.md  CRT-T-0179.md  CRT-T-0180.md  CRT-T-0181.md  CRT-T-0182.md
.metis/initiatives/CRT-I-0031/: initiative.md
.metis/initiatives/CRT-I-0031/tasks/: CRT-T-0183.md  CRT-T-0184.md  CRT-T-0185.md  CRT-T-0186.md  CRT-T-0187.md  CRT-T-0188.md  CRT-T-0189.md
.metis/initiatives/CRT-I-0032/: initiative.md
.metis/initiatives/CRT-I-0032/tasks/: CRT-T-0190.md  CRT-T-0191.md  CRT-T-0192.md  CRT-T-0193.md
.metis/initiatives/CRT-I-0033/: initiative.md
.metis/initiatives/CRT-I-0033/tasks/: CRT-T-0202.md  CRT-T-0203.md  CRT-T-0204.md  CRT-T-0205.md  CRT-T-0206.md  CRT-T-0207.md  CRT-T-0208.md
.metis/strategies/NULL/initiatives/CRT-I-0001/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0005/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0007/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0008/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0009/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0010/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0011/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0012/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0013/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0014/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0015/: initiative.md
.metis/strategies/NULL/initiatives/CRT-I-0016/: initiative.md
assets/: config.toml  crt.desktop
assets/shell/: crt-bash-init
assets/shell/crt-zsh-init/: .zshenv  .zshrc
assets/themes/: alien.css  dracula.css  matrix.css  minimal.css  nyancat-responsive.css  nyancat.css  particles.css  pokemon.css  rain.css  robco-reactive.css  robco.css  shape.css  solarized.css  starfield.css  stress.css  synthwave.css  tron.css  vaporwave.css  wh40k.css
config/: config.example.toml
crates/crt-app/: Cargo.toml
crates/crt-app/src/: main.rs
crates/crt-config/: Cargo.toml
crates/crt-config/src/: keybindings.rs  lib.rs  themes.rs  watcher.rs
crates/crt-core/: Cargo.toml
crates/crt-core/benches/: terminal.rs
crates/crt-core/src/: config.rs  lib.rs  pty.rs
crates/crt-renderer/: Cargo.toml
crates/crt-renderer/src/: background_image.rs  font.rs  glyph_cache.rs  golden.rs  grid_renderer.rs  headless.rs  lib.rs  mock.rs  rect_renderer.rs  shared_pipelines.rs  sprite_renderer.rs  tab_bar.rs  terminal_vello.rs  traits.rs  vello_renderer.rs
crates/crt-renderer/src/effects/: grid.rs  matrix.rs  mod.rs  motion.rs  particles.rs  rain.rs  renderer.rs  shape.rs  sprite.rs  starfield.rs
crates/crt-renderer/src/shaders/: background.wgsl  background_image.wgsl  composite.wgsl  crt.wgsl  effects_blit.wgsl  grid.wgsl  mod.rs  rect.wgsl  sprite.wgsl  tab_bar.wgsl
crates/crt-renderer/src/tab_bar/: layout.rs  mod.rs  renderer.rs  state.rs  vello_renderer.rs
crates/crt-theme/: Cargo.toml
crates/crt-theme/benches/: theme_parsing.rs
crates/crt-theme/src/: lib.rs  parser.rs
docs/: theming.md  troubleshooting.md
docs/explanation/: architecture.md  backdrop-effects.md  rendering-pipeline.md  theming-system.md
docs/gallery/: README.md
docs/how-to/: build-from-source.md  configure-keybindings.md  create-custom-theme.md  create-sprite-from-gif.md  install.md  profile-performance.md  set-up-reactive-themes.md
docs/reference/: built-in-themes.md  configuration.md  environment-variables.md  keyboard-shortcuts.md  theme-css-properties.md
docs/tutorials/: add-animated-sprites.md  build-your-first-theme.md  getting-started.md
examples/: font_rendering.rs  prototype_a.rs  prototype_b.rs  synthwave.rs  terminal.rs  terminal_effects.rs  text_glow.rs
installer/linux/: install.sh  uninstall.sh
installer/macos/: Info.plist  build-app.sh  build-pkg.sh  crt.icns  install-config.sh
installer/macos/scripts/: postinstall
pkg/aur/: PKGBUILD.template
scripts/: benchmark.sh  dev.sh  install.sh  publish-aur.sh  release.sh
shaders/: crt.wgsl  synthwave.wgsl  text_glow.wgsl
src/: config.rs  font.rs  gpu.rs  input.rs  lib.rs  main.rs  menu.rs  profiling.rs  render.rs  theme_registry.rs  watcher.rs  window.rs
src/app/: effects.rs  handler.rs  initialization.rs  menu_actions.rs  mod.rs
src/gpu/: buffer_pool.rs  mod.rs  shared_pipelines.rs  texture_pool.rs
src/input/: commands.rs  drag.rs  key_encoder.rs  keyboard.rs  mod.rs  mouse.rs  url_detection.rs
src/managers/: config_manager.rs  event_handler.rs  mod.rs  window_manager.rs
src/render/: context_menu.rs  dialogs.rs  mod.rs  overlays.rs  selection.rs
src/state/: mod.rs  selection.rs  tab_state.rs  ui_state.rs
src/window/: interaction.rs  mod.rs  overrides.rs  render.rs  types.rs  ui.rs
tests/: shell_tests.rs  terminal_tests.rs  visual_tests.rs
tests/common/: mod.rs
themes/: synthwave.css
(+279 files in other folders)
