[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core terminal
vte = "0.15"
alacritty_terminal = "0.25"
portable-pty = "0.9"

# Rendering
wgpu = "25"
glyphon = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }

# Windowing
winit = "0.30"

# Theme parsing (to be added in future tasks)
# cssparser = "0.34"

# Utilities
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
naga = { version = "25", features = ["wgsl-out", "wgsl-in"] }

# Root package for examples
[package]
name = "crt"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
naga = { workspace = true }
glyphon = { workspace = true }

[[example]]
name = "prototype_a"
path = "examples/prototype_a.rs"

[[example]]
name = "prototype_b"
path = "examples/prototype_b.rs"

[[example]]
name = "text_glow"
path = "examples/text_glow.rs"

[[example]]
name = "synthwave"
path = "examples/synthwave.rs"

[[example]]
name = "font_rendering"
path = "examples/font_rendering.rs"
