[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.4"
edition = "2024"

[workspace.dependencies]
# Core terminal
vte = "0.15"
alacritty_terminal = "0.25"
portable-pty = "0.9"
termwiz = "0.22"

# Rendering
wgpu = "26"
vello = "0.6"
glyphon = "0.9"
fontdue = "0.9"
swash = "0.1"
fontdb = "0.22"
bytemuck = { version = "1.14", features = ["derive"] }

# Windowing
winit = "0.30"

# Theme parsing
cssparser = "0.34"
lightningcss = "1.0.0-alpha.68"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Utilities
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
naga = { version = "26", features = ["wgsl-out", "wgsl-in"] }
notify = "7.0"
muda = "0.15"
dirs = "5.0"

# Main binary package
[package]
name = "crt"
version = "0.0.4"
edition = "2024"
description = "GPU-accelerated terminal emulator with synthwave aesthetics"
license = "MIT"
keywords = ["terminal", "emulator", "gpu", "wgpu"]
categories = ["command-line-utilities"]

[[bin]]
name = "crt"
path = "src/main.rs"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
vello = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
naga = { workspace = true }
crt-core = { path = "crates/crt-core" }
crt-renderer = { path = "crates/crt-renderer" }
crt-theme = { path = "crates/crt-theme" }
anyhow = { workspace = true }
notify = { workspace = true }
muda = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
arboard = "3.6.1"
clipboard-files = "0.1"
image = { workspace = true }
regex = "1.12.2"
open = "5.3.3"
fontdb = { workspace = true }
termwiz = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.23.0"

# Benchmark binaries (run with: cargo run --release --bin benchmark)
[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "benchmark_gpu"
path = "src/bin/benchmark_gpu.rs"
