[package]
name = "crt-app"
version = "0.1.0"
edition = "2024"

[dependencies]
crt-core = { path = "../crt-core" }
crt-renderer = { path = "../crt-renderer" }
crt-theme = { path = "../crt-theme" }

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
