[package]
name = "crt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
alacritty_terminal.workspace = true
portable-pty.workspace = true
anyhow.workspace = true
crossbeam-queue = "0.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "terminal"
harness = false
